Services/external-service-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service
  namespace: default
subsets:
- addresses:
  - ip: 10.0.0.1
  - ip: 10.0.0.2
  - ip: 10.0.0.3
  ports:
  - name: http
    port: 9376
    protocol: TCP
