Services/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName
  externalName: fakestoreapi.com
  ports:
  - port: 80
