Services/kubia-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-loadbalancer
  namespace: default
spec:
  selector:
    app: kubia
  type: LoadBalancer
  ports:
  - name: kubia-loadbalancer
    protocol: TCP
    port: 80
    targetPort: 8080
